--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,11 +1,4 @@
 header {
-  background: teal;
-  color: #f5f5f5;
-  height: 4em;
-  line-height: 4em;
-  padding: 0 2em;
-  h1 {
-    font-size: 2em;
-    font-weight: 700;
-  }
+  background-color: teal;
+  color: white;
 }
